--- a/Jupyter/Regular Expressions in Python.ipynb
+++ b/Jupyter/Regular Expressions in Python.ipynb
@@ -22,7 +22,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d59472bfd99d4585a2aaf08e05d0240d",
+       "model_id": "9634ca2df0db4169aa695c2d1bc37ebf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -56,13 +56,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cad32ca4746e40fd97208f91b08f593a",
+       "model_id": "c8c9e19197774964a915331883fde4b1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -116,6 +116,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": false,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
