--- a/Jupyter/Robocup Soccer Video - Object Tracking.ipynb
+++ b/Jupyter/Robocup Soccer Video - Object Tracking.ipynb
@@ -14,13 +14,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "730d5390f1984f93bee7da22a65a10d8",
+       "model_id": "9a6ae89fe5af4278a738c453311a4612",
        "version_major": 2,
        "version_minor": 0
       },
@@ -55,7 +55,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8064af085b724b3695c94a25e78a2e9c",
+       "model_id": "f3cd211da7b7417c83032f3c7321f07b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -117,7 +117,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "421794509ef64743a613478f722efd1b",
+       "model_id": "24376c3673cc49c3851fb7e00a5a88f8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -177,13 +177,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ac901552e3ca4709af8469e1b38070c6",
+       "model_id": "0c7a2726011a443582f9c52b819c001f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -283,6 +283,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": false,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
