--- a/Jupyter/Volleyball Dataset Instructions.ipynb
+++ b/Jupyter/Volleyball Dataset Instructions.ipynb
@@ -98,7 +98,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3ef1630c6f24488cb0f69f88aeae2390",
+       "model_id": "126468937b4941759a6359fa18661158",
        "version_major": 2,
        "version_minor": 0
       },
@@ -252,6 +252,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
