--- a/Jupyter/KTH Action Dataset (video) Classification.ipynb
+++ b/Jupyter/KTH Action Dataset (video) Classification.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,18 +83,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'new': 0}\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "26558f78d2ed4925a0d13f753d3d777e",
+       "model_id": "c03f2cff04114fc0b94dd51f83d81ffb",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(Dropdown(description='Video #:', options=('person08_walking_d4_uncomp.avi', 'per…"
+       "VBox(children=(HBox(children=(Dropdown(description='Video #:', options=('person16_walking_d1_uncomp.avi', 'per…"
       ]
      },
      "metadata": {},
