--- a/Jupyter/WL Soccer Dataset creation.ipynb
+++ b/Jupyter/WL Soccer Dataset creation.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,13 +108,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'new': 0}\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eafcc863b2064f16bd171d42ccd157d3",
+       "model_id": "f54646bd64a0473b9d9325938ad7dfe7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -124,6 +131,63 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'value', 'old': 41, 'new': 42, 'owner': IntSlider(value=42, max=83), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 83, 'new': 82, 'owner': IntSlider(value=82, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 82, 'new': 58, 'owner': IntSlider(value=58, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 58, 'new': 52, 'owner': IntSlider(value=52, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 52, 'new': 51, 'owner': IntSlider(value=51, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 51, 'new': 47, 'owner': IntSlider(value=47, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 47, 'new': 46, 'owner': IntSlider(value=46, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 46, 'new': 45, 'owner': IntSlider(value=45, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 45, 'new': 44, 'owner': IntSlider(value=44, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 44, 'new': 42, 'owner': IntSlider(value=42, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 42, 'new': 46, 'owner': IntSlider(value=46, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 46, 'new': 47, 'owner': IntSlider(value=47, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 47, 'new': 49, 'owner': IntSlider(value=49, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 49, 'new': 51, 'owner': IntSlider(value=51, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 51, 'new': 53, 'owner': IntSlider(value=53, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 53, 'new': 54, 'owner': IntSlider(value=54, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 54, 'new': 57, 'owner': IntSlider(value=57, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 57, 'new': 58, 'owner': IntSlider(value=58, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 58, 'new': 59, 'owner': IntSlider(value=59, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 59, 'new': 60, 'owner': IntSlider(value=60, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 60, 'new': 61, 'owner': IntSlider(value=61, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 61, 'new': 62, 'owner': IntSlider(value=62, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 62, 'new': 64, 'owner': IntSlider(value=64, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 64, 'new': 66, 'owner': IntSlider(value=66, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 66, 'new': 67, 'owner': IntSlider(value=67, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 67, 'new': 68, 'owner': IntSlider(value=68, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 68, 'new': 70, 'owner': IntSlider(value=70, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 70, 'new': 71, 'owner': IntSlider(value=71, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 71, 'new': 72, 'owner': IntSlider(value=72, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 72, 'new': 74, 'owner': IntSlider(value=74, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 74, 'new': 75, 'owner': IntSlider(value=75, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 75, 'new': 77, 'owner': IntSlider(value=77, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 77, 'new': 78, 'owner': IntSlider(value=78, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 78, 'new': 79, 'owner': IntSlider(value=79, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 79, 'new': 80, 'owner': IntSlider(value=80, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 80, 'new': 81, 'owner': IntSlider(value=81, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 81, 'new': 82, 'owner': IntSlider(value=82, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 82, 'new': 81, 'owner': IntSlider(value=81, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 81, 'new': 78, 'owner': IntSlider(value=78, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 78, 'new': 73, 'owner': IntSlider(value=73, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 73, 'new': 70, 'owner': IntSlider(value=70, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 70, 'new': 67, 'owner': IntSlider(value=67, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 67, 'new': 59, 'owner': IntSlider(value=59, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 59, 'new': 55, 'owner': IntSlider(value=55, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 55, 'new': 50, 'owner': IntSlider(value=50, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 50, 'new': 45, 'owner': IntSlider(value=45, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 45, 'new': 42, 'owner': IntSlider(value=42, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 42, 'new': 46, 'owner': IntSlider(value=46, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 46, 'new': 57, 'owner': IntSlider(value=57, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 57, 'new': 78, 'owner': IntSlider(value=78, max=83, min=42), 'type': 'change'}\n",
+      "{'name': 'value', 'old': 78, 'new': 83, 'owner': IntSlider(value=83, max=83, min=42), 'type': 'change'}\n"
+     ]
     }
    ],
    "source": [
@@ -143,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -151,7 +215,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "799d4795b709401a800dcb4b65f3b596",
+       "model_id": "fc063bc99c6e4556bd5962f63bed439f",
        "version_major": 2,
        "version_minor": 0
       },
