--- a/Jupyter/temp-Copy1.bib
+++ b/Jupyter/temp-Copy1.bib
@@ -91,17 +91,7 @@
    type = {Book Section}
 }
 
-@inbook{RN149,
-   author = {Azorin-Lopez, Jorge and Saval-Calvo, Marcelo and Fuster-Guillo, Andres and Garcia-Rodriguez, Jose and Cazorla, Miguel and Teresa Signes-Pont, Maria and Ieee},
-   title = {Group Activity Description and Recognition based on Trajectory Analysis and Neural Networks},
-   booktitle = {2016 International Joint Conference on Neural Networks},
-   series = {IEEE International Joint Conference on Neural Networks (IJCNN)},
-   pages = {1585-1592},
-   ISBN = {978-1-5090-0619-9},
-   url = {<Go to ISI>://WOS:000399925501104},
-   year = {2016},
-   type = {Book Section}
-}
+
 
 @article{RN136,
    author = {Azorin-Lopez, Jorge and Saval-Calvo, Marcelo and Fuster-Guillo, Andres and Garcia-Rodriguez, Jose and Mora-Mora, Higinio},
@@ -921,17 +911,6 @@
    type = {Book Section}
 }
 
-@article{RN106,
-   author = {Wu, Li-Fang and Wang, Qi and Jian, Meng and Qiao, Yu and Zhao, Bo-Xuan},
-   title = {A Comprehensive Review of Group Activity Recognition in Videos},
-   journal = {International Journal of Automation and Computing},
-   ISSN = {1476-8186},
-   DOI = {10.1007/s11633-020-1258-8},
-   url = {<Go to ISI>://WOS:000607019200001},
-   year = {2021},
-   type = {Journal Article}
-}
-
 @article{RN107,
    author = {Wu, Lifang and Yang, Zhou and Wang, Qi and Jian, Meng and Zhao, Boxuan and Yan, Junchi and Chen, Chang Wen},
    title = {Fusing motion patterns and key visual information for semantic event recognition in basketball videos},
@@ -958,6 +937,7 @@
    type = {Journal Article}
 }
 
+
 @article{RN112,
    author = {Xu, Dezhong and Fu, Heng and Wu, Lifang and Jian, Meng and Wang, Dong and Liu, Xu},
    title = {Group Activity Recognition by Using Effective Multiple Modality Relation Representation With Temporal-Spatial Attention},
@@ -983,87 +963,57 @@
    type = {Book}
 }
 
-@article{RN161,
-   author = {Yonghwanseung and 최정인},
-   title = {Conceptual Group Activity Recognition Method in the Classroom Environment},
-   journal = {KIISE Transactions on Computing Practices},
-   volume = {21},
-   number = {5},
-   pages = {351-358},
-   ISSN = {2383-6318},
-   url = {<Go to ISI>://KJD:ART001990983},
+@article{RN186,
+   author = {Kuang, Zijian and Tie, Xinran},
+   title = {Video Understanding based on Human Action and Group Activity Recognition},
+   journal = {arXiv preprint arXiv:2010.12968},
+   year = {2020},
+   type = {Journal Article}
+}
+
+@article{RN185,
+   author = {Venugopalan, S and Rohrbach, M and Donahue, J and Mooney, R and Darrell, T and Saenko, K},
+   title = {Sequence to Sequence - Video to Text},
+   journal = {2015 Ieee International Conference on Computer Vision (Iccv)},
+   pages = {4534-4542},
+   ISSN = {1550-5499},
+   DOI = {10.1109/ICCV.2015.515},
    year = {2015},
    type = {Journal Article}
 }
 
-@book{RN167,
-   author = {Zaidenberg, Sofia and Bilinski, Piotr and Bremond, Francois},
-   title = {Towards Unsupervised Sudden Group Movement Discovery for Video Surveillance},
-   series = {Proceedings of the 2014 9th International Conference on Computer Vision, Theory and Applications},
-   pages = {388-395},
-   ISBN = {978-9-8975-8133-5},
-   url = {<Go to ISI>://WOS:000412737200046},
-   year = {2014},
-   type = {Book}
+@inproceedings{RN201,
+  title={Visual recognition by counting instances: A multi-instance cardinality potential kernel},
+  author={Hajimirsadeghi, Hossein and Yan, Wang and Vahdat, Arash and Mori, Greg},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={2596--2605},
+  year={2015}
 }
 
-@book{RN173,
-   author = {Zhang, Sheng and Chen, Yuanzhe and Lin, Weiyao and Jiang, Dong and Yao, Chunlian and Luo, Chuanfei},
-   title = {A Network-based Algorithm for Recognizing Group Activities with Multiple People and Crowded Scenes},
-   series = {2013 6th International Congress on Image and Signal Processing},
-   pages = {69-74},
-   ISBN = {978-1-4799-2763-0},
-   url = {<Go to ISI>://WOS:000341115000014},
-   year = {2013},
-   type = {Book}
+@inproceedings{RN202,
+  title={What are they doing?: Collective activity classification using spatio-temporal relationship among people},
+  author={Choi, Wongun and Shahid, Khuram and Savarese, Silvio},
+  booktitle={2009 IEEE 12th international conference on computer vision workshops, ICCV Workshops},
+  pages={1282--1289},
+  year={2009},
+  organization={IEEE}
 }
 
-@inbook{RN145,
-   author = {Zhuang, Naifan and Yusufu, Tuoerhongjiang and Ye, Jun and Hua, Kien A. and Ieee},
-   title = {Group Activity Recognition with Differential Recurrent Convolutional Neural Networks},
-   booktitle = {2017 12th Ieee International Conference on Automatic Face and Gesture Recognition},
-   series = {IEEE International Conference on Automatic Face and Gesture Recognition and Workshops},
-   pages = {526-531},
-   ISBN = {978-1-5090-4023-0},
-   DOI = {10.1109/fg.2017.70},
-   url = {<Go to ISI>://WOS:000414287400071},
-   year = {2017},
-   type = {Book Section}
+@inproceedings{RN203,
+  title={Actions and attributes from wholes and parts},
+  author={Gkioxari, Georgia and Girshick, Ross and Malik, Jitendra},
+  booktitle={Proceedings of the IEEE international conference on computer vision},
+  pages={2470--2478},
+  year={2015}
 }
 
-@article{GS101,
-  title={Latent label mining for group activity recognition in basketball videos},
-  author={Wu, Lifang and Li, Zeyu and Xiang, Ye and Jian, Meng and Shen, Jialie},
-  journal={IET Image Processing},
-  year={2021},
-  publisher={Institution of Engineering and Technology}
-}
-
-@article{GS102,
-  title={Position-Aware Participation-Contributed Temporal Dynamic Model for Group Activity Recognition},
-  author={Yan, Rui and Shu, Xiangbo and Yuan, Chengcheng and Tian, Qi and Tang, Jinhui},
-  journal={IEEE Transactions on Neural Networks and Learning Systems},
-  year={2021},
+@article{RN204,
+  title={Understanding collective activitiesof people from videos},
+  author={Choi, Wongun and Savarese, Silvio},
+  journal={IEEE transactions on pattern analysis and machine intelligence},
+  volume={36},
+  number={6},
+  pages={1242--1257},
+  year={2013},
   publisher={IEEE}
 }
-
-@article{GS103,
-  title={End-to-end Key-Player-Based Group Activity Recognition Network Applied to Basketball Offensive Tactic Identification in Limited Data Scenarios},
-  author={Tsai, Tsung-Yu and Lin, Yen-Yu and Jeng, Shyh-Kang and Liao, Hong-Yuan Mark},
-  journal={IEEE Access},
-  year={2021},
-  publisher={IEEE}
-}
-
-@article{GS104,
-  title={Machine Learning Model for Group Activity Recognition Based on Discriminative Interaction Contextual Relationship},
-  author={Kulkarni, Smita S and Jadhav, Sangeeta},
-  journal={Mathematical Problems in Engineering},
-  volume={2021},
-  year={2021},
-  DOI = {10.1155/2021/5596312},
-  publisher={Hindawi}
-}
-
-
-
